--- a/templates/Flutter.xml
+++ b/templates/Flutter.xml
@@ -6,4 +6,13 @@
       <option name="FLUTTER" value="true" />
     </context>
   </template>
+  <template name="fc" value="($start$){$end1$}$end2$" description="fc" toReformat="true" toShortenFQNames="true">
+    <variable name="start" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="end1" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="end2" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="DART_STATEMENT" value="true" />
+      <option name="FLUTTER" value="true" />
+    </context>
+  </template>
 </templateSet>
